<resources>
    <string name="app_name">Authenticator</string>
    <string name="txt_error_internet_connection">Internet connection not available</string>
    <string name="txt_error_network">Network error occurred, please try again later!</string>
    <string name="txt_registration">Registration</string>
    <string name="txt_register">Register</string>
    <string name="txt_account_list">Account List</string>
    <string name="txt_add_account">Add Account</string>
    <string name="account_name">Account Name</string>
    <string name="location_name">Location Name</string>
    <string name="select_location">Select Location</string>
    <string name="txt_submit">Submit</string>
    <string name="error_enter_account_name">Please Enter Account Name</string>
    <string name="error_enter_email">Please Enter Email Address</string>
    <string name="error_enter_location">Please Enter Location Name</string>
    <string name="error_select_location">Please Select Location</string>
    <string name="txt_email">Email</string>
</resources>
