<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="auth.android.app.ui.activity.AddAccountActivity">
    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>
    <LinearLayout
        android:layout_margin="20dp"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_account_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@null"
            android:hint="@string/account_name"
            android:inputType="text"
            android:maxLines="1"
            android:paddingTop="2dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:paddingStart="7dp"
            android:background="@drawable/et_message_bg"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="7dp"
            android:background="@drawable/et_message_bg"
            android:backgroundTint="@null"
            android:layout_marginTop="10dp"
            android:hint="@string/txt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingTop="2dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/et_location"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="7dp"
            android:background="@drawable/et_message_bg"
            android:backgroundTint="@null"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/select_location"
            android:drawableEnd="@drawable/icon_add"
            android:drawableTint="@color/black"
            android:inputType="text"
            android:maxLines="1"
            android:paddingTop="2dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_location_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingStart="7dp"
            android:background="@drawable/et_message_bg"
            android:backgroundTint="@null"
            android:hint="@string/location_name"
            android:inputType="text"
            android:maxLines="1"
            android:paddingTop="2dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_submit_account"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_radius_bg"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/txt_submit"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>



    <RelativeLayout
        android:id="@+id/progress_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99ffffff"
        android:clickable="true"
        android:elevation="6dp"
        android:visibility="gone"
        android:focusable="true">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>
